[package]
name = "pacrus"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.10.0", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"

git2 = "0.13.21"
emojicons = "1.0.0"
yansi = "0.5"